--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3000
-MONGODB_URI=mongodb+srv://masingamasibonge:jZLu7BWZwiWaqXZO@cluster0.rvmknje.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=
 JWT_SECRET=somesupersecretsecret
 CACHE_TIME=15
-USERNAME=masingamasibonge
-PASSWORD=jZLu7BWZwiWaqXZO
+USERNAME=
+PASSWORD=
